# obs-studio

plugins/: CMakeLists.txt
plugins/linux-dmabuf/: CMakeLists.txt  dmabuf.c
plugins/obs-ffmpeg/: CMakeLists.txt  obs-ffmpeg-vaapi-avc.c  obs-ffmpeg-vaapi-hevc.c  obs-ffmpeg-vaapi.c  obs-ffmpeg-vaapi.h  obs-ffmpeg.c  vaapi-utils.c  vaapi-utils.h
